[gd_scene load_steps=6 format=2]

[ext_resource path="res://Props/Crate/Crate.gd" type="Script" id=1]
[ext_resource path="res://Props/Requirements/Requirements.tscn" type="PackedScene" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.443137, 0.360784, 0.266667, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.28582, 1.34774, 1.39036 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3.11706, 1, 2.7876 )

[node name="Crate" type="Spatial"]
script = ExtResource( 1 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
material = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="CSGCombiner/CSGBox2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0433551, 0 )
operation = 2
width = 1.79549
depth = 1.61199
material = SubResource( 1 )

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
height = 1.84774
material = SubResource( 1 )

[node name="CSGBox4" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0.98388, 0 )
width = 0.2
height = 0.1
depth = 2.4987
material = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Requirements" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.61155, 0 )
list = PoolStringArray( "hammer" )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
